[gd_scene load_steps=9 format=3 uid="uid://0o8xuqpas5pm"]

[ext_resource type="PackedScene" uid="uid://cpca77ej1yb0r" path="res://scenes/battle.tscn" id="1_w5c55"]
[ext_resource type="FontFile" uid="uid://5f43jlg64l66" path="res://assets/upheavtt.ttf" id="2_6ol5p"]
[ext_resource type="Script" path="res://scripts/Beatspace.gd" id="2_ataih"]
[ext_resource type="PackedScene" uid="uid://lleyqefuyaud" path="res://scenes/boomboy.tscn" id="3_7n8tq"]
[ext_resource type="PackedScene" uid="uid://ix8sbcamod8m" path="res://scenes/player_battle.tscn" id="4_t2a2w"]
[ext_resource type="Texture2D" uid="uid://byh1y470mcf11" path="res://assets/beat/attack_2.png" id="5_cmjet"]
[ext_resource type="Texture2D" uid="uid://ba8nyag6icd5c" path="res://assets/beat/attack_1.png" id="6_axbjt"]
[ext_resource type="Texture2D" uid="uid://b5pfi4oenlp5s" path="res://assets/beat/defense_1.png" id="7_j1sg4"]

[node name="BattleBoomboy" type="Node2D"]

[node name="Battle" parent="." instance=ExtResource("1_w5c55")]

[node name="CenterContainer" parent="Battle" index="4"]
script = ExtResource("2_ataih")

[node name="Beatspace" parent="Battle/CenterContainer" index="0"]
script = null

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 400.0
offset_top = 104.0
offset_right = 752.0
offset_bottom = 176.0
theme_override_fonts/font = ExtResource("2_6ol5p")
theme_override_font_sizes/font_size = 80
text = "Boomboy"
horizontal_alignment = 1

[node name="CharacterBody2D2" parent="." instance=ExtResource("3_7n8tq")]
position = Vector2(-384, -640)
scale = Vector2(5, 5)

[node name="player_battle" parent="." instance=ExtResource("4_t2a2w")]
position = Vector2(212, 418)
scale = Vector2(5, 5)

[node name="beat_atk2" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("5_cmjet")

[node name="beat_atk1" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("6_axbjt")

[node name="beat_def" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("7_j1sg4")

[editable path="Battle"]
